Updates to sponsors page and lodging page

--- a/sponsors.html
+++ b/sponsors.html
@@ -109,7 +109,6 @@
 	<br/>
 	<br/>
 	<section id="prizeGrid">
-		<!-- Images must be 300x255 -->
 		<div class="container">
 			<div class="row">
 				<div class="text-center">
@@ -118,7 +117,7 @@
 				<br/>
 				<br/>
 				<div class="col-sm-4 center">
-					<a href="http://www.scheels.com" target="_blank" id="sponsor"><img class="img-responsive center img-large" src="images/sponsors/scheelsLarge.png" alt="Scheels"></a>
+					<a href="http://www.scheels.com" target="_blank" id="sponsor"><img class="img-responsive center img-large" src="images/sponsors/scheels.png" alt="Scheels"></a>
 				</div>
 				<div class="col-sm-4 center">
 					<a href="http://www.eauclaireford.com/" target="_blank" id="sponsor"><img class="img-responsive center img-large" src="images/sponsors/ford.png" alt="Ford"></a>
