Updates to footers to fix the scheels logo

--- a/tickets.html
+++ b/tickets.html
@@ -187,7 +187,7 @@
 	<footer>
 		<div class="footer hidden-xs">
 			<div class="sponsorBar">
-				<a href="http://www.scheels.com" target="_blank"><img class="sponsorBarTitleImg" src="images/sponsors/scheelsLarge.png" alt="Scheels"></a>
+				<a href="http://www.scheels.com" target="_blank"><img class="sponsorBarTitleImg" src="images/sponsors/scheels.png" alt="Scheels"></a>
 				<a href="http://www.eauclaireford.com/" target="_blank"><img class="sponsorBarTitleImg" src="images/sponsors/ford.png" alt="Ford"></a>
 				<a href="http://www.subway.com/subwayroot/default.aspx" target="_blank"><img class="sponsorBarTitleImg" src="images/sponsors/Subway.png" alt="Subway"></a>
 			</div>
@@ -214,7 +214,7 @@
 		<div class="footer visible-xs">
 			<p class="small-footer">
 				<div class="sponsorBar">
-					<a href="http://www.scheels.com" target="_blank"><img class="sponsorBarTitleImg" src="images/sponsors/scheelsLarge.png" alt="Scheels"></a>
+					<a href="http://www.scheels.com" target="_blank"><img class="sponsorBarTitleImg" src="images/sponsors/scheels.png" alt="Scheels"></a>
 					<a href="http://www.eauclaireford.com/" target="_blank"><img class="sponsorBarTitleImg" src="images/sponsors/ford.png" alt="Ford"></a>
 					<a href="http://www.subway.com/subwayroot/default.aspx" target="_blank"><img class="sponsorBarTitleImg" src="images/sponsors/Subway.png" alt="Subway"></a>
 				</div>
