--- a/contact.html
+++ b/contact.html
@@ -178,11 +178,11 @@
 										<tbody>
 											<tr>
 												<td>Shari Breed</td>
-												<td>UWEC Recreation and Sport Facilities</td>
+												<td>UWEC Recreation and Sport Operations</td>
 											</tr>
 											<tr>
 												<td>Tammy Brunschmid</td>
-												<td>UWEC Recreation and Sport Facilities</td>
+												<td>UWEC Recreation and Sport Operations</td>
 											</tr>
 											<tr>
 												<td>Mike Adams</td>
@@ -198,7 +198,7 @@
 											</tr>
 											<tr>
 												<td>Andy Jepsen</td>
-												<td>UWEC Recreation and Sport Facilities</td>
+												<td>UWEC Recreation and Sport Operations</td>
 											</tr>
 											<tr>
 												<td>Jamie Kane</td>
@@ -214,7 +214,7 @@
 											</tr>
 											<tr>
 												<td>Sheryl Poirier</td>
-												<td>UWEC Recreation and Sport Facilities</td>
+												<td>UWEC Recreation and Sport Operations</td>
 											</tr>
 											<tr>
 												<td>Dave Prescher</td>
@@ -226,11 +226,11 @@
 											</tr>
 											<tr>
 												<td>Jan Thorsen</td>
-												<td>UWEC Recreation and Sport Facilities</td>
+												<td>UWEC Recreation and Sport Operations</td>
 											</tr>
 											<tr>
 												<td>Al Wiberg</td>
-												<td>UWEC Recreation and Sport Facilities</td>
+												<td>UWEC Recreation and Sport Operations</td>
 											</tr>
 										</tbody>
 									</table>
@@ -264,7 +264,7 @@
 <footer>
 	<div class="footer hidden-xs">
 		<div class="sponsorBar">
-			<a href="http://www.scheels.com" target="_blank"><img class="sponsorBarTitleImg" src="images/sponsors/scheelsLarge.png" alt="Scheels"></a>
+			<a href="http://www.scheels.com" target="_blank"><img class="sponsorBarTitleImg" src="images/sponsors/scheels.png" alt="Scheels"></a>
 			<a href="http://www.eauclaireford.com/" target="_blank"><img class="sponsorBarTitleImg" src="images/sponsors/ford.png" alt="Ford"></a>
 			<a href="http://www.subway.com/subwayroot/default.aspx" target="_blank"><img class="sponsorBarTitleImg" src="images/sponsors/Subway.png" alt="Subway"></a>
 		</div>
@@ -291,7 +291,7 @@
 	<div class="footer visible-xs">
 		<p class="small-footer">
 			<div class="sponsorBar">
-				<a href="http://www.scheels.com" target="_blank"><img class="sponsorBarTitleImg" src="images/sponsors/scheelsLarge.png" alt="Scheels"></a>
+				<a href="http://www.scheels.com" target="_blank"><img class="sponsorBarTitleImg" src="images/sponsors/scheels.png" alt="Scheels"></a>
 				<a href="http://www.eauclaireford.com/" target="_blank"><img class="sponsorBarTitleImg" src="images/sponsors/ford.png" alt="Ford"></a>
 				<a href="http://www.subway.com/subwayroot/default.aspx" target="_blank"><img class="sponsorBarTitleImg" src="images/sponsors/Subway.png" alt="Subway"></a>
 			</div>
