--- a/ticketsInProgress.html
+++ b/ticketsInProgress.html
@@ -195,7 +195,7 @@
 	<footer display="inline-block">
 		<div class="footer hidden-xs">
 			<div class="sponsorBar">
-				<a href="http://www.scheels.com" target="_blank"><img class="sponsorBarImg" src="images/sponsors/scheelsLarge.png" alt="Scheels"></a>
+				<a href="http://www.scheels.com" target="_blank"><img class="sponsorBarImg" src="images/sponsors/scheels.png" alt="Scheels"></a>
 				<a href="http://www.subway.com/subwayroot/default.aspx" target="_blank"><img class="sponsorBarImg" src="images/sponsors/Subway.png" alt="Subway"></a>
 				<a href="http://www.weau.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/weau13.png" alt="Weau 13 News"></a>
 				<a href="http://www.eauclaireford.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/ford.png" alt="Ford"></a>
@@ -217,7 +217,7 @@
 			<div class="footer visible-xs">
 				<p class="small-footer">
 					<div class="sponsorBar">
-						<a href="http://www.scheels.com" target="_blank"><img class="sponsorBarImg" src="images/sponsors/scheelsLarge.png" alt="Scheels"></a>
+						<a href="http://www.scheels.com" target="_blank"><img class="sponsorBarImg" src="images/sponsors/scheels.png" alt="Scheels"></a>
 						<a href="http://www.subway.com/subwayroot/default.aspx" target="_blank"><img class="sponsorBarImg" src="images/sponsors/Subway.png" alt="Subway"></a>
 						<a href="http://www.weau.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/weau13.png" alt="Weau 13 News"></a>
 						<a href="http://www.eauclaireford.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/ford.png" alt="Ford"></a>
