Banner updates and Scheels logo updates

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
 						<div class="sponsors">
 							<a href="http://www.scheels.com" target="_blank">
-								<img class="indexTitleSponsor" src="images/sponsors/scheelsLarge.png" alt="Scheels">
+								<img class="indexTitleSponsor" src="images/sponsors/scheels.png" alt="Scheels">
 							</a>
 
 							<a href="http://www.eauclaireford.com/" target="_blank">
