Update index.html and re-indent other files

--- a/tickets.html
+++ b/tickets.html
@@ -124,8 +124,7 @@
 				<h4 class="headers">Fish Tickets:</h4>
 				<h4>$25, one ticket required for each fish registered, multiple tickets may be purchased </h4>
 				<blockquote>
-					Over $80,000 in cash and prizes including a <b>Ford F150 Truck!</b> Prizes awarded to the top 25 fish by weight and every 5th place thereafter to the 300th place so even a small fish can
-					win big!
+					Over $80,000 in cash and prizes including a <b>Ford F150 Truck!</b>
 				</blockquote>
 
 				<ul class="list">
