--- a/index.html
+++ b/index.html
@@ -154,41 +154,41 @@
 						<a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
 							<span class="glyphicon glyphicon-chevron-left"></span></a><a class="right carousel-control" href="#carousel-example-generic" data-slide="next"><span class="glyphicon glyphicon-chevron-right">
 							</span></a>
-						</div>
+					</div>
 
 
-						<div class="sponsors">
-							<a href="http://www.scheels.com" target="_blank">
+					<div class="sponsors">
+						<a href="http://www.scheels.com" target="_blank">
 								<img class="indexTitleSponsor" src="images/sponsors/scheels.png" alt="Scheels">
 							</a>
 
-							<a href="http://www.eauclaireford.com/" target="_blank">
+						<a href="http://www.eauclaireford.com/" target="_blank">
 								<img class="indexTitleSponsor" src="images/sponsors/ford.png" ald="Ford">
 							</a>
 
-							<a href="http://www.subway.com/subwayroot/default.aspx" target="_blank">
+						<a href="http://www.subway.com/subwayroot/default.aspx" target="_blank">
 								<img class="indexTitleSponsor" src="images/sponsors/Subway.png" alt="Subway">
 							</a>
-						</div>
-
 					</div>
+
 				</div>
 			</div>
+		</div>
 
 
-			<div class="text-center">
-				<h4 class="headers">UWEC Recreation, Blugold Athletics, and the Lake Wissota Lions Club presents:</h4>
-				<h1 class="headers"><b>6th Annual JIG'S UP Blugold Ice Fishing Contest</b></h1>
-				<img alt="Sponsors Logo" src="images/3logo-bg.png">
-				<div class="horizbar"></div>
+		<div class="text-center">
+			<h4 class="headers">UWEC Recreation, Blugold Athletics, and the Lake Wissota Lions Club presents:</h4>
+			<h1 class="headers"><b>6th Annual JIG'S UP Blugold Ice Fishing Contest</b></h1>
+			<img alt="Sponsors Logo" src="images/3logo-bg.png">
+			<div class="horizbar"></div>
 
-			</div>
+		</div>
 
-			<div class="fwb-logos-all">
-				<a href="http://www.uwec.edu/recreation"><img src="images/rec.png" class="fwb-logos"></a>
-				<a href="http://www.e-clubhouse.org/sites/lakewissota/"><img src="images/lw.png" class="fwb-logos-lw"></a>
-				<a href="http://blugolds.com/landing/index"><img src="images/athletics.png" class="fwb-logos-ath"></a>
-			</div>
+		<div class="fwb-logos-all">
+			<a href="http://www.uwec.edu/recreation"><img src="images/rec.png" class="fwb-logos"></a>
+			<a href="http://www.e-clubhouse.org/sites/lakewissota/"><img src="images/lw.png" class="fwb-logos-lw"></a>
+			<a href="http://blugolds.com/landing/index"><img src="images/athletics.png" class="fwb-logos-ath"></a>
+		</div>
 
 		</section>
 		<section id="content">
@@ -217,136 +217,149 @@
 						<blockquote>
 							Over $80,000 in cash and prizes including a 2-year lease on a <b>2019 Ford F150 Truck</b> drawn from all registered Fish Tickets!
 							Prizes awarded to the top 25 fish and every 5th place thereafter by weight to 300th place so even a small fish can win big!
-							<b>Each participant may register one fish per ticket</b>; tickets are $25 with no limit on the number of tickets an individual can purchase. Raffle prizes include a <b>2019 Polaris
-								Sportsman 450 4-wheeler</b>, raffle tickets are $5 each or 5 for $20! Prizes for the top fish by weight in each category: northern, walleye, and pan fish.
-							</blockquote>
-							<p>
-								<i>
+							<b>Each participant may register one fish per ticket</b>; tickets are $25 with no limit on the number of tickets an individual can purchase. Everyone who registers a fish may request two free Blugold Football Tickets at the weigh-in stations
+							(value $16).
+							Raffle prizes include a <b>2019 Polaris Sportsman 450 4-wheeler</b>, raffle tickets are $5 each or 5 for $20! $100 Gift card prizes for the top fish by weight in each category: northern, walleye, and pan fish.
+							&quot;The One that Got Away&quot; drawing from all Fish Ticket holders that did not register a fish, turn in Fish Ticket stub at the Prize Table at The View by 2:30pm.
+						</blockquote>
+						<p>
+							<i>
 									All state regulations and bag limits apply and no person may bring in
 									more than the legal limit of fish allowed, which for this contest
 									includes northern, walleye, and pan fish.
 								</i>
-							</p>
-							<p>
-								Purchase tickets at the following locations:
-								<ul>
-									<li>Online at jigsup.org</li>
-									<li>Scheels</li>
-									<li>Select Mega Holiday Stations</li>
-									<li>Eau Claire Ford</li>
-									<li>UWEC Recreation</li>
-									<li>The Edge</li>
-									<li>The View</li>
-									<!--<li>The SandBar and Grill</li>-->
-								</ul>
-								For contest rules and additional information, visit jigsup.org or contact UWEC recreation at (715)836-3377.
-							</p>
-							<br />
-							<!-- BREAK -->
-							<br />
-							<!-- BREAK -->
-						</div>
+						</p>
+						<p>
+							Purchase tickets at the following locations:
+							<ul>
+								<li>Online at jigsup.org <font color="red">*</font>
+								</li>
+								<li>Scheels (bait available) <font color="red">*</font>
+								</li>
+								<li>Select Mega Holiday Stations</li>
+								<li>Eau Claire Ford</li>
+								<li>Jacobson’s Hardware (bait available)</li>
+								<li>UWEC Recreation <font color="red">*</font>
+								</li>
+								<li>The Edge <font color="red">*</font>
+								</li>
+								<li>The View <font color="red">*</font>
+								</li>
+								<!--<li>The SandBar and Grill</li>-->
+							</ul>
+							<ul>
+								<font color="red">*</font> : <i>Raffle tickets available</i>
+							</ul>
 
-						<!-- #col-sm-6  -->
-						<div class="col-sm-6">
-
-							<h3 class="headers"><b>Social Media</b></h3>
-							<blockquote>
-								Like us on <a href="https://www.facebook.com/pages/The-Jigs-Up-Ice-Fishing-Contest/736663866412522">Facebook</a> to receive updates.
-							</blockquote>
-
-							<!-- BREAK -->
-							<div class="videowrapper">
-								<iframe width="560" height="315" src="https://www.youtube.com/embed/CegFjNXfmlM" frameborder="0" allowfullscreen></iframe>
-							</div>
-							<div class="videowrapper">
-								<iframe width="560" height="315" src="https://www.youtube.com/embed/8yo0ZtBL6F4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-							</div>
-
-						</div>
-						<!-- #col-sm-6  -->
+							For contest rules and additional information, visit jigsup.org or contact UWEC recreation at (715)836-3377.
+						</p>
+						<br />
+						<!-- BREAK -->
+						<br />
+						<!-- BREAK -->
 					</div>
-					<!-- #row  -->
-				</div>
-				<!-- #container  -->
-				<br />
-				<!-- BREAK -->
-				<br />
-				<!-- BREAK -->
-				<br />
-				<!-- BREAK -->
-				<br />
-				<!-- BREAK -->
-			</section>
 
-			<p>
-				<i>
+					<!-- #col-sm-6  -->
+					<div class="col-sm-6">
+
+						<h3 class="headers"><b>Social Media</b></h3>
+						<blockquote>
+							Like us on <a href="https://www.facebook.com/pages/The-Jigs-Up-Ice-Fishing-Contest/736663866412522">Facebook</a> to receive updates.
+						</blockquote>
+
+						<!-- BREAK -->
+						<div class="videowrapper">
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/CegFjNXfmlM" frameborder="0" allowfullscreen></iframe>
+						</div>
+						<div class="videowrapper">
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/8yo0ZtBL6F4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+						</div>
+
+					</div>
+					<!-- #col-sm-6  -->
+				</div>
+				<!-- #row  -->
+			</div>
+			<!-- #container  -->
+			<br />
+			<!-- BREAK -->
+			<br />
+			<!-- BREAK -->
+			<br />
+			<!-- BREAK -->
+			<br />
+			<!-- BREAK -->
+		</section>
+
+		<p>
+			<i>
 
 				</i>
-			</p>
+		</p>
 
-			<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-			<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-			<!-- Include all compiled plugins (below), or include individual files as needed -->
-			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-			<script src="js/lib/jquery-1.9.1.min.js" type="text/javascript"></script>
-			<script src="js/main.js" type="text/javascript"></script>
-		</body>
+		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+		<!-- Include all compiled plugins (below), or include individual files as needed -->
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+		<script src="js/lib/jquery-1.9.1.min.js" type="text/javascript"></script>
+		<script src="js/main.js" type="text/javascript"></script>
+</body>
 
-		<footer>
-			<div class="footer hidden-xs">
-				<div class="sponsorBar">
-					<a href="http://www.scheels.com" target="_blank"><img class="sponsorBarTitleImg" src="images/sponsors/scheels.png" alt="Scheels"></a>
-					<a href="http://www.eauclaireford.com/" target="_blank"><img class="sponsorBarTitleImg" src="images/sponsors/ford.png" alt="Ford"></a>
-					<a href="http://www.subway.com/subwayroot/default.aspx" target="_blank"><img class="sponsorBarTitleImg" src="images/sponsors/Subway.png" alt="Subway"></a>
-				</div>
-				<div class="sponsorBar">
-					<a href="http://www.weau.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/weau13.png" alt="Weau 13 News"></a>
-					<a href="http://www.geteskimo.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/eskimo.png" alt="Eskimo Ice Fishing Gear"></a>
-					<a href="http://www.megacoop.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/megaholiday.png" alt="Mega! CO-OP Holiday Stations"></a>
-					<a href="http://www.prestigervauto.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/prestige.png" alt="Presitge Auto Corportation"></a>
-					<a href="http://www.uwec.edu/dining/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/dining.png" alt="Blugold Dining by Sodexo"></a>
-					<a href="http://www.theedgepubandeatery.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/edge.png" alt="The Edge Pub and Eatery"></a>
-				</div>
-				<div class="sponsorBar">
-					<a href="https://www.facebook.com/wissota.view.5" target="_blank"><img class="sponsorBarImg" src="images/sponsors/view.png" alt="The View"></a>
-					<a href="https://ttmtech.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/ttmtech.png" alt="TTM Technologies"></a>
-					<a href="http://www.xtrememotorsportsllc.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/XTREME MOTORSPORTS_2C_DIGITAL BLUE.png" alt="Xtreme Motorsports, LLCXtreme Motorsports, LLC"></a>
-					<a href="https://mydynamicfitness.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/Dynamic-Logo-OnWhite.png" alt="Dynamic Fitness and Strength"></a>
-					<a href="http://www.leinie.com" target="_blank"><img class="sponsorBarImg" src="images/sponsors/lein.png" alt="Leinenkugel's"></a>
-					<a href="https://www.aceautomall.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/AceAutoMall.png" alt="Ace Auto Mall"></a>
-				</div>
-				<p>
-					Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
-				</p>
+<footer>
+	<div class="footer hidden-xs">
+		<div class="sponsorBar">
+			<a href="http://www.scheels.com" target="_blank"><img class="sponsorBarTitleImg" src="images/sponsors/scheels.png" alt="Scheels"></a>
+			<a href="http://www.eauclaireford.com/" target="_blank"><img class="sponsorBarTitleImg" src="images/sponsors/ford.png" alt="Ford"></a>
+			<a href="http://www.subway.com/subwayroot/default.aspx" target="_blank"><img class="sponsorBarTitleImg" src="images/sponsors/Subway.png" alt="Subway"></a>
+		</div>
+		<div class="sponsorBar">
+			<a href="http://www.weau.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/weau13.png" alt="Weau 13 News"></a>
+			<a href="http://www.geteskimo.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/eskimo.png" alt="Eskimo Ice Fishing Gear"></a>
+			<a href="http://www.megacoop.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/megaholiday.png" alt="Mega! CO-OP Holiday Stations"></a>
+			<a href="http://www.prestigervauto.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/prestige.png" alt="Presitge Auto Corportation"></a>
+			<a href="http://www.uwec.edu/dining/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/dining.png" alt="Blugold Dining by Sodexo"></a>
+			<a href="http://www.theedgepubandeatery.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/edge.png" alt="The Edge Pub and Eatery"></a>
+		</div>
+		<div class="sponsorBar">
+			<a href="https://www.facebook.com/wissota.view.5" target="_blank"><img class="sponsorBarImg" src="images/sponsors/view.png" alt="The View"></a>
+			<a href="https://ttmtech.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/ttmtech.png" alt="TTM Technologies"></a>
+			<a href="http://www.xtrememotorsportsllc.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/XTREME MOTORSPORTS_2C_DIGITAL BLUE.png" alt="Xtreme Motorsports, LLCXtreme Motorsports, LLC"></a>
+			<a href="https://mydynamicfitness.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/Dynamic-Logo-OnWhite.png" alt="Dynamic Fitness and Strength"></a>
+			<a href="http://www.leinie.com" target="_blank"><img class="sponsorBarImg" src="images/sponsors/lein.png" alt="Leinenkugel's"></a>
+			<a href="https://www.aceautomall.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/AceAutoMall.png" alt="Ace Auto Mall"></a>
+		</div>
+		<p>
+			Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
+		</p>
+	</div>
+	<div class="footer visible-xs">
+		<p class="small-footer">
+			<div class="sponsorBar">
+				<a href="http://www.scheels.com" target="_blank"><img class="sponsorBarTitleImg" src="images/sponsors/scheels.png" alt="Scheels"></a>
+				<a href="http://www.eauclaireford.com/" target="_blank"><img class="sponsorBarTitleImg" src="images/sponsors/ford.png" alt="Ford"></a>
+				<a href="http://www.subway.com/subwayroot/default.aspx" target="_blank"><img class="sponsorBarTitleImg" src="images/sponsors/Subway.png" alt="Subway"></a>
 			</div>
-			<div class="footer visible-xs">
-				<p class="small-footer">
-					<div class="sponsorBar">
-						<a href="http://www.scheels.com" target="_blank"><img class="sponsorBarTitleImg" src="images/sponsors/scheels.png" alt="Scheels"></a>
-						<a href="http://www.eauclaireford.com/" target="_blank"><img class="sponsorBarTitleImg" src="images/sponsors/ford.png" alt="Ford"></a>
-						<a href="http://www.subway.com/subwayroot/default.aspx" target="_blank"><img class="sponsorBarTitleImg" src="images/sponsors/Subway.png" alt="Subway"></a>
-					</div>
-					<div class="sponsorBar">
-						<a href="http://www.weau.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/weau13.png" alt="Weau 13 News"></a>
-						<a href="http://www.geteskimo.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/eskimo.png" alt="Eskimo Ice Fishing Gear"></a>
-						<a href="http://www.megacoop.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/megaholiday.png" alt="Mega! CO-OP Holiday Stations"></a>
-						<a href="http://www.prestigervauto.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/prestige.png" alt="Presitge Auto Corportation"></a>
-						<a href="http://www.uwec.edu/dining/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/dining.png" alt="Blugold Dining by Sodexo"></a>
-						<a href="http://www.theedgepubandeatery.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/edge.png" alt="The Edge Pub and Eatery"></a>
-					</div>
-					<div class="sponsorBar">
-						<a href="https://www.facebook.com/wissota.view.5" target="_blank"><img class="sponsorBarImg" src="images/sponsors/view.png" alt="The View"></a>
-						<a href="https://ttmtech.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/ttmtech.png" alt="TTM Technologies"></a>
-						<a href="http://www.xtrememotorsportsllc.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/XTREME MOTORSPORTS_2C_DIGITAL BLUE.png" alt="Xtreme Motorsports, LLCXtreme Motorsports, LLC"></a>
-						<a href="https://mydynamicfitness.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/Dynamic-Logo-OnWhite.png" alt="Dynamic Fitness and Strength"></a>
-						<a href="http://www.leinie.com" target="_blank"><img class="sponsorBarImg" src="images/sponsors/lein.png" alt="Leinenkugel's"> </a>
-						<a href="https://www.aceautomall.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/AceAutoMall.png" alt="Ace Auto Mall"></a>
-					</div>
-					Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
-					<br />
-					<!-- BREAK -->
-				</p>
+			<div class="sponsorBar">
+				<a href="http://www.weau.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/weau13.png" alt="Weau 13 News"></a>
+				<a href="http://www.geteskimo.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/eskimo.png" alt="Eskimo Ice Fishing Gear"></a>
+				<a href="http://www.megacoop.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/megaholiday.png" alt="Mega! CO-OP Holiday Stations"></a>
+				<a href="http://www.prestigervauto.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/prestige.png" alt="Presitge Auto Corportation"></a>
+				<a href="http://www.uwec.edu/dining/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/dining.png" alt="Blugold Dining by Sodexo"></a>
+				<a href="http://www.theedgepubandeatery.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/edge.png" alt="The Edge Pub and Eatery"></a>
 			</div>
-		</footer>
-		</html>
+			<div class="sponsorBar">
+				<a href="https://www.facebook.com/wissota.view.5" target="_blank"><img class="sponsorBarImg" src="images/sponsors/view.png" alt="The View"></a>
+				<a href="https://ttmtech.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/ttmtech.png" alt="TTM Technologies"></a>
+				<a href="http://www.xtrememotorsportsllc.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/XTREME MOTORSPORTS_2C_DIGITAL BLUE.png" alt="Xtreme Motorsports, LLCXtreme Motorsports, LLC"></a>
+				<a href="https://mydynamicfitness.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/Dynamic-Logo-OnWhite.png" alt="Dynamic Fitness and Strength"></a>
+				<a href="http://www.leinie.com" target="_blank"><img class="sponsorBarImg" src="images/sponsors/lein.png" alt="Leinenkugel's"> </a>
+				<a href="https://www.aceautomall.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/AceAutoMall.png" alt="Ace Auto Mall"></a>
+			</div>
+			Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
+			<br />
+			<!-- BREAK -->
+		</p>
+	</div>
+</footer>
+
+</html>
