Changed the image on lodging

--- a/lodging.html
+++ b/lodging.html
@@ -129,6 +129,12 @@
 						<br/>
 				</div>
 				<div class="row">
+
+					<div class="col-sm">
+						<a><img src="images/lodging.png" class="img-responsive" alt="Lodging"></a>
+					</div>
+
+					<!--
 					<div class="col-sm-3">
 						<a><img src="images/OxBow.jpg" class="img-responsive" alt="OxBow Hotel"></a>
 					</div>
@@ -139,6 +145,7 @@
 						<a><img src="images/HolidayInn.jpg" class="img-responsive" alt="Holiday Inn"></a>
 					</div>
 				</div>
+				-->
 				<div class="row">
 					<h2 class="headers">Hotels & Motels in Eau Claire</h2>
 					<br/>
