--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 					</ol>
 					<div class="carousel-inner">
 						<div class="item active">
-							<img src="images/slider/slide1.jpeg" alt="First slide">
+							<img src="images/slider/bleepbloop.jpeg" alt="First slide">
 							<div class="carousel-caption">
 							</div>
 						</div>
