Upload index and tickets

--- a/index.html
+++ b/index.html
@@ -217,9 +217,9 @@
 						<blockquote>
 							Over $80,000 in cash and prizes including a 2-year lease on a <b>2019 Ford F150 Truck</b> drawn from all registered Fish Tickets!
 							Prizes awarded to the top 25 fish and every 5th place thereafter by weight to 300th place so even a small fish can win big!
-							<b>Each participant may register one fish per ticket</b>; tickets are $25 with no limit on the number of tickets an individual can purchase. Everyone who registers a fish may request two free Blugold Football Tickets at the weigh-in stations
+							<br><br><b>Each participant may register one fish per ticket</b>; tickets are $25 with no limit on the number of tickets an individual can purchase. Everyone who registers a fish may request two free Blugold Football Tickets at the weigh-in stations
 							(value $16).
-							Raffle prizes include a <b>2019 Polaris Sportsman 450 4-wheeler</b>, raffle tickets are $5 each or 5 for $20! $100 Gift card prizes for the top fish by weight in each category: northern, walleye, and pan fish.
+							<br><br>Raffle prizes include a <b>2019 Polaris Sportsman 450 4-wheeler</b>, raffle tickets are $5 each or 5 for $20! $100 Gift card prizes for the top fish by weight in each category: northern, walleye, and pan fish.
 							&quot;The One that Got Away&quot; drawing from all Fish Ticket holders that did not register a fish, turn in Fish Ticket stub at the Prize Table at The View by 2:30pm.
 						</blockquote>
 						<p>
