Reindent index.html

--- a/index.html
+++ b/index.html
@@ -87,29 +87,15 @@
 
 					<li class="social-media">
 						<a target="_blank" class="fbook" href="https://www.facebook.com/pages/The-Jigs-Up-Ice-Fishing-Contest/736663866412522">
-							<img alt="Facebook Logo" src="images/facebook.png" class="fbook" </img>
-						</a>
-					</li>
-					<li>
-						<a alt="Twitter Logo" target="_blank" class="twitter" href="https://twitter.com/uwecrecreation">
-							<img src="images/twitter.png" class="twitter" </img>
-						</a>
-					</li>
-					<li>
-						<a target="_blank" class="twitter" href="https://instagram.com/UWEC_Recreation/">
-							<img alt="Instagram Logo" src="images/instagram.png" class="fbook" </img>
-						</a>
-					</li>
-					<li>
-						<a target="_blank" class="twitter" href="http://www.e-clubhouse.org/sites/lakewissota/">
-							<img alt="Lion's Club Logo" src="images/lclub.png" class="lclub" </img>
-						</a>
-					</li>
-				</ul>
+							<img alt="Facebook Logo" src="images/facebook.png" class="fbook" </img> </a> </li> <li>
+							<a alt="Twitter Logo" target="_blank" class="twitter" href="https://twitter.com/uwecrecreation">
+								<img src="images/twitter.png" class="twitter" </img> </a> </li> <li>
+								<a target="_blank" class="twitter" href="https://instagram.com/UWEC_Recreation/">
+									<img alt="Instagram Logo" src="images/instagram.png" class="fbook" </img> </a> </li> <li>
+									<a target="_blank" class="twitter" href="http://www.e-clubhouse.org/sites/lakewissota/">
+										<img alt="Lion's Club Logo" src="images/lclub.png" class="lclub" </img> </a> </li> </ul> </div> <!-- /.navbar-collapse -->
 			</div>
-			<!-- /.navbar-collapse -->
-		</div>
-		<!-- /.container -->
+			<!-- /.container -->
 	</nav>
 </head>
 
@@ -159,16 +145,16 @@
 
 					<div class="sponsors">
 						<a href="http://www.scheels.com" target="_blank">
-								<img class="indexTitleSponsor" src="images/sponsors/scheels.png" alt="Scheels">
-							</a>
+							<img class="indexTitleSponsor" src="images/sponsors/scheels.png" alt="Scheels">
+						</a>
 
 						<a href="http://www.eauclaireford.com/" target="_blank">
-								<img class="indexTitleSponsor" src="images/sponsors/ford.png" ald="Ford">
-							</a>
+							<img class="indexTitleSponsor" src="images/sponsors/ford.png" ald="Ford">
+						</a>
 
 						<a href="http://www.subway.com/subwayroot/default.aspx" target="_blank">
-								<img class="indexTitleSponsor" src="images/sponsors/Subway.png" alt="Subway">
-							</a>
+							<img class="indexTitleSponsor" src="images/sponsors/Subway.png" alt="Subway">
+						</a>
 					</div>
 
 				</div>
@@ -217,17 +203,18 @@
 						<blockquote>
 							Over $80,000 in cash and prizes including a 2-year lease on a <b>2019 Ford F150 Truck</b> drawn from all registered Fish Tickets!
 							Prizes awarded to the top 25 fish and every 5th place thereafter by weight to 300th place so even a small fish can win big!
-							<br><br><b>Each participant may register one fish per ticket</b>; tickets are $25 with no limit on the number of tickets an individual can purchase. Everyone who registers a fish may request two free Blugold Football Tickets at the weigh-in stations
+							<br><br><b>Each participant may register one fish per ticket</b>; tickets are $25 with no limit on the number of tickets an individual can purchase. Everyone who registers a fish may request two free Blugold Football Tickets at the weigh-in
+							stations
 							(value $16).
 							<br><br>Raffle prizes include a <b>2019 Polaris Sportsman 450 4-wheeler</b>, raffle tickets are $5 each or 5 for $20! $100 Gift card prizes for the top fish by weight in each category: northern, walleye, and pan fish.
 							&quot;The One that Got Away&quot; drawing from all Fish Ticket holders that did not register a fish, turn in Fish Ticket stub at the Prize Table at The View by 2:30pm.
 						</blockquote>
 						<p>
 							<i>
-									All state regulations and bag limits apply and no person may bring in
-									more than the legal limit of fish allowed, which for this contest
-									includes northern, walleye, and pan fish.
-								</i>
+								All state regulations and bag limits apply and no person may bring in
+								more than the legal limit of fish allowed, which for this contest
+								includes northern, walleye, and pan fish.
+							</i>
 						</p>
 						<p>
 							Purchase tickets at the following locations:
@@ -294,7 +281,7 @@
 		<p>
 			<i>
 
-				</i>
+			</i>
 		</p>
 
 		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
